force-app/main/default/objects/blng__ErrorLog__c/blng__ErrorLog__c.object-meta.xml
<CustomObject>
    <description>Next Generation Billing exception log object. It keeps track of all the exception in the org. Logging can be switched off and on using NGBExceptionSwitch label.</description>
    <label>Error Log</label>
    <nameField>
        <label>Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>