force-app/main/default/objects/blng__ErrorLog__c/fields/blng__Account__c.field-meta.xml
<CustomField>
    <fullName>blng__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>ErrorLogs</relationshipName>
    <type>Lookup</type>
</CustomField>