force-app/main/default/objects/blng__ErrorLog__c/fields/blng__BalanceSnapshotRun__c.field-meta.xml
<CustomField>
    <fullName>blng__BalanceSnapshotRun__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Balance Snapshot Run</label>
    <referenceTo>blng__BalanceSnapShotRun__c</referenceTo>
    <relationshipName>BalanceSnapshotRunErrorLogs</relationshipName>
    <type>Lookup</type>
</CustomField>