force-app/main/default/objects/blng__ErrorLog__c/fields/blng__BatchJob__c.field-meta.xml
<CustomField>
    <fullName>blng__BatchJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Job</label>
    <referenceTo>blng__BillingBatchJob__c</referenceTo>
    <relationshipName>BatchJobErrorLogs</relationshipName>
    <type>Lookup</type>
</CustomField>