force-app/main/default/objects/blng__ErrorLog__c/fields/blng__DebitNoteLine__c.field-meta.xml
<CustomField>
    <fullName>blng__DebitNoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Debit Note Line</label>
    <referenceTo>blng__DebitNoteLine__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>