force-app/main/default/objects/blng__ErrorLog__c/fields/blng__ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>blng__ErrorCode__c</fullName>
    <description>Code of exception. For standard exception it would be name e.g. DMLException. For custom exceptions it would be Error code defined by us. E.g. Batch 101 – Invoice batch transaction failed, Batch 202 – Payment batch transaction failed. This field will have only Batch 101 as value.</description>
    <label>Error Code</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>