force-app/main/default/objects/blng__ErrorLog__c/fields/blng__ErrorName__c.field-meta.xml
<CustomField>
    <fullName>blng__ErrorName__c</fullName>
    <label>Error Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>