force-app/main/default/objects/blng__ErrorLog__c/fields/blng__ErrorOrigin__c.field-meta.xml
<CustomField>
    <fullName>blng__ErrorOrigin__c</fullName>
    <label>Error Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>