force-app/main/default/objects/blng__ErrorLog__c/fields/blng__FinancePeriod__c.field-meta.xml
<CustomField>
    <fullName>blng__FinancePeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The finance period where an error occurred.</description>
    <label>Finance Period</label>
    <referenceTo>blng__FinancePeriod__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>FinancePeriodErrorLogs</relationshipName>
    <type>Lookup</type>
</CustomField>