force-app/main/default/objects/blng__ErrorLog__c/fields/blng__FullErrorLog__c.field-meta.xml
<CustomField>
    <fullName>blng__FullErrorLog__c</fullName>
    <description>Actual message of the exception.</description>
    <label>Full Error Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>