force-app/main/default/objects/blng__ErrorLog__c/fields/blng__InvoiceScheduler__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceScheduler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Scheduler</label>
    <referenceTo>blng__InvoiceScheduler__c</referenceTo>
    <relationshipName>InvoiceSchedulerErrorLogs</relationshipName>
    <type>Lookup</type>
</CustomField>