force-app/main/default/objects/blng__ErrorLog__c/fields/blng__Order__c.field-meta.xml
<CustomField>
    <fullName>blng__Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Error Logs (Order)</relationshipLabel>
    <relationshipName>OrdersErrorLogs</relationshipName>
    <type>Lookup</type>
</CustomField>