force-app/main/default/objects/blng__ErrorLog__c/fields/blng__OriginMethod__c.field-meta.xml
<CustomField>
    <fullName>blng__OriginMethod__c</fullName>
    <label>Origin Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>