force-app/main/default/objects/blng__ErrorLog__c/fields/blng__PaymentAllocationInvoice__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentAllocationInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Allocation (Invoice)</label>
    <referenceTo>blng__PaymentAllocationInvoice__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>ErrorLogs</relationshipName>
    <type>Lookup</type>
</CustomField>