force-app/main/default/objects/blng__ErrorLog__c/fields/blng__ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>blng__ReferenceId__c</fullName>
    <externalId>true</externalId>
    <label>ReferenceId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>