force-app/main/default/objects/blng__ErrorLog__c/fields/blng__RevenueSchedule__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Schedule</label>
    <referenceTo>blng__RevenueSchedule__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>RevenueScheduleErrorLogs</relationshipName>
    <type>Lookup</type>
</CustomField>