force-app/main/default/objects/blng__ErrorLog__c/fields/blng__Summary__c.field-meta.xml
<CustomField>
    <fullName>blng__Summary__c</fullName>
    <description>One line description of the exception. For standard it would remain the same e.g. DMLException. For custom it would be a summary e.g. – Payment batch transaction failed.</description>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>