force-app/main/default/objects/blng__ErrorLog__c/fields/blng__Transaction__c.field-meta.xml
<CustomField>
    <fullName>blng__Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Transaction</label>
    <referenceTo>blng__PaymentTransaction__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>ErrorLogs</relationshipName>
    <type>Lookup</type>
</CustomField>