force-app/main/default/objects/blng__ErrorLog__c/fields/blng__Usage__c.field-meta.xml
<CustomField>
    <fullName>blng__Usage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usage</label>
    <referenceTo>blng__Usage__c</referenceTo>
    <relationshipName>UsageErrorLogs</relationshipName>
    <type>Lookup</type>
</CustomField>