force-app/main/default/objects/blng__ErrorLog__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>blng__ErrorCode__c</columns>
    <columns>blng__ErrorName__c</columns>
    <columns>blng__ErrorOrigin__c</columns>
    <columns>blng__FullErrorLog__c</columns>
    <columns>blng__OriginMethod__c</columns>
    <columns>blng__ReferenceId__c</columns>
    <columns>blng__Summary__c</columns>
    <columns>blng__Transaction__c</columns>
    <columns>blng__InvoiceRun__c</columns>
    <columns>blng__InvoiceScheduler__c</columns>
    <columns>blng__PaymentRun__c</columns>
    <columns>blng__PaymentScheduler__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>